test/Neg/termina/var_assignment/test2.fin
function f (n : u8) {

    for i : u8 in 0 .. 10 {
        i = i + n;
    }

    return;

}
